bo-archival/force-app/main/default/objects/Lead__b/Lead__b.object-meta.xml
<CustomObject>
    <label>Lead</label>
    <pluralLabel>Leads</pluralLabel>
</CustomObject>