bo-archival/force-app/main/default/objects/Lead__b/fields/ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAccountId__c</fullName>
    <label>Converted Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>