bo-archival/force-app/main/default/objects/Lead__b/fields/ConvertedContactId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedContactId__c</fullName>
    <label>Converted Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>