bo-archival/force-app/main/default/objects/Lead__b/fields/ConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDate__c</fullName>
    <label>Converted Date</label>
    <type>DateTime</type>
</CustomField>