bo-archival/force-app/main/default/objects/Lead__b/fields/ConvertedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedOpportunityId__c</fullName>
    <label>Converted Opportunity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>