bo-archival/force-app/main/default/objects/Lead__b/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>Created By Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>