bo-archival/force-app/main/default/objects/Lead__b/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <label>Do Not Call</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>