bo-archival/force-app/main/default/objects/Lead__b/fields/GeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>GeocodeAccuracy__c</fullName>
    <label>Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>