bo-archival/force-app/main/default/objects/Lead__b/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <label>Email Opt Out</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>