bo-archival/force-app/main/default/objects/Lead__b/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Lead Id</description>
    <label>Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>