bo-archival/force-app/main/default/objects/Lead__b/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <label>Individual Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>