bo-archival/force-app/main/default/objects/Lead__b/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <label>Is Converted</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>