bo-archival/force-app/main/default/objects/Lead__b/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>