bo-archival/force-app/main/default/objects/Lead__b/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>