bo-archival/force-app/main/default/objects/Lead__b/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>