bo-archival/force-app/main/default/objects/Lead__b/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>